Fix chrome wrap bug

--- a/geologia/static/css/geologia.css
+++ b/geologia/static/css/geologia.css
@@ -128,7 +128,6 @@ body > header .wrapper p {
 @media (min-width: 768px) {
   .chart{
     display: flex;
-    flex-wrap: wrap;
   }
 
   .punchcard,
